awesant (0.12) released at XXXX-XX-XX

    * Implemented a failover mechanism for the redis output.
    * The hostname can now be set in the configuration file.
    * Added parameter milliseconds for @timestamp.

awesant (0.11) released at 2012-08-30

    * Added option ssl_verify_mode to Input/Socket.pm and Output/Socket.pm.
    * Fixed dependencies of Awesant. Class::Accessor was missed.
    * Modified the init script to make it runable on Solaris.
    * It's now possible to use a wildcard for output types.
    * Improved logrotate handling - the file input waits up to 10 seconds
      for new lines before close the rotated file.
    * Fixed a typo in the init script that removes insserv warnings on Debian:
      'insserv: warning: script 'awesant-agent' missing LSB tags and overrides'

awesant (0.10) released at 2013-07-17

    * Added new output Rabbitmq.
    * Fixed "undefined value as a hash reference ... line 371" if
      only one input exists that has workers configured.

awesant (0.9) released at 2013-04-19

    * Fixed: add_field does not work if format is set to json_event.

awesant (0.8) released at 2013-04-15

    * JSON output is now utf8.
    * Added a TZ hack for Perl 5.8.3 and POSIX 1.07.
      UTC at the end of the time string is replaced with Z.
    * Awesant is now continuously watching for new log files on all paths
      that contains a wildcard. If a new log file is created then the log
      file is added to the input automatically.
    * Improved the forking machine for the file input. In the past for each
      single file a process was forked if the parameter "workers" was set.
      Now only one process is forked to process all files from a single
      input configuration. The forked process is also watching for new
      log files. For file inputs max 1 worker is possible.
    * Added the new parameter "start_position" to Input/File.pm. With this
      parameter it's possible to set where to start to tail the logfile.