@@ -3,6 +3,8 @@ awesant (0.12) released at XXXX-XX-XX
     * Implemented a failover mechanism for the redis output.
     * The hostname can now be set in the configuration file.
     * Added parameter milliseconds for @timestamp.
+    * Added parameter oldlogstashjson to switch between the old
+      and new logstash json schema.
 
 awesant (0.11) released at 2012-08-30
 
